--- a/index.html
+++ b/index.html
@@ -20,6 +20,41 @@
         <div class="container">
             <nav class="main-nav main-nav-center-tab">
                 <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+                <button type="button" class="menu-button" data-menu-button>
+                    <div class="menu-container" data-menu id="menu-container">
+                        <ul class="header-site-nav-tablet list">
+                            <li class="site-nav item">
+                                <a href="" class="nav-border current">Студия</a>
+                            </li>
+                            <li class="site-nav item">
+                                <a href="./portfolio.html">Портфолио</a>
+                            </li>
+                            <li class="site-nav item">
+                                <a href="">Контакты</a>
+                            </li>
+                        </ul>
+                        <ul class="header-mail-tel">
+                            <li class="header-center">
+                                <a href="" class="link-icons-header item header-center">
+                                    <svg class="icon-contacts-header" width="16" height="12">
+                                        <use href="./img/sprite.svg#icon-envelope"></use>
+                                    </svg>
+                                    info@devstudio.com
+                                </a>
+                                <a href="" class="link-icons-header item header-center">
+                                    <svg class="icon-contacts-header" width="10" height="16">
+                                        <use href="./img/sprite.svg#icon-smartphone"></use>
+                                    </svg>
+                                    +38 096 111 11 11
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <svg wight="20" height="20" aria-label="моб меню" aria-expanded="false">
+                        <use class="icon-menu" href="./img/sprite.svg#icon-menu_24px"></use>
+                        <use class="icon-cross" href="./img/sprite.svg#icon-close_24px"></use>
+                    </svg>
+                </button>
                 <ul class="header-site-nav-tablet list">
                     <li class="site-nav item">
                         <a href="" class="nav-border current">Студия</a>
@@ -482,6 +517,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
