--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                     <div class="menu-container" data-menu id="menu-container">
                         <ul class="header-site-nav-tablet list">
                             <li class="site-nav item">
-                                <a href="" class="nav-border current">Студия</a>
+                                <a href="./index.html" class="nav-border current">Студия</a>
                             </li>
                             <li class="site-nav item">
                                 <a href="./portfolio.html">Портфолио</a>
@@ -401,7 +401,8 @@
             </form>
         </div>
     </footer>
-
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
