--- a/portfolio.html
+++ b/portfolio.html
@@ -110,8 +110,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img.jpg 1x,./img/portfolio-desktop/img@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img.jpg" alt="Технокряк">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img.jpg" alt="Технокряк">
+
                                 <p class=" portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -136,8 +137,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img2.jpg 1x,./img/portfolio-desktop/img2@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img2.jpg" alt="Постер">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img2.jpg" alt="Постер">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -162,8 +164,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img3.jpg 1x,./img/portfolio-desktop/img3@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img3.jpg" alt="Ресторан">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img3.jpg" alt="Ресторан">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -188,8 +191,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img4.jpg 1x,./img/portfolio-desktop/img4@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img4.jpg" alt="Проект">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img4.jpg" alt="Проект">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -214,8 +218,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img5.jpg 1x,./img/portfolio-desktop/img5@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img5.jpg" alt="Проект">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img5.jpg" alt="Проект">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -240,8 +245,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img6.jpg 1x,./img/portfolio-desktop/img6@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img6.jpg" alt="Inspiration">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img6.jpg" alt="Inspiration">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -266,8 +272,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img7.jpg 1x,./img/portfolio-desktop/img7@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img7.jpg" alt="Издание">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img7.jpg" alt="Издание">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -292,8 +299,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img8.jpg 1x,./img/portfolio-desktop/img8@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img8.jpg" alt="Проект LAB">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img8.jpg" alt="Проект LAB">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
@@ -318,8 +326,9 @@
                                     <source
                                         srcset="./img/portfolio-desktop/img9.jpg 1x,./img/portfolio-desktop/img9@2x.jpg 2x"
                                         media="(min-width: 1200px)">
+                                    <img class="img-portfolio" src="./img/portfolio-mobile/img9.jpg" alt="Business">
                                 </picture>
-                                <img src="./img/portfolio-mobile/img9.jpg" alt="Business">
+
                                 <p class="portfolio-img-title">Технокряк это современная площадка распространения
                                     коронавируса.
                                     Компании используют эту платформу для цифрового
